Fix sidenav view having blurry text with one hell of a hack

--- a/frontend/src/app/+webview/home-view.component.scss
+++ b/frontend/src/app/+webview/home-view.component.scss
@@ -9,17 +9,29 @@
         margin-left: 30px;
     }
 }
+.active {
+    background-color: #E5E5E5;
+}
+md-sidenav {
+    width: 200px;
+}
 .list-view {
-    margin-top: 40px;
-    margin-right: 40px;
+    transform: scale(2, 2);
+    zoom: 0.5;
+    margin-top: 230px;
+    margin-left: 45px;
+    overflow: hidden;
 
     p {
-        font-size: 20px;
+        padding-left: 20px;
+        padding-right: 9px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-left: 50px;
+        cursor: pointer;
+        font-size: 16px;
         font-weight: bold;
-    }
-
-    p:active {
-        color: red;
+        margin-bottom: 10px;
     }
 }
 /deep/ header {
